removed scrollbar and fix characters list for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,12 @@ html, body {
   border-radius: 0 0 8px 0;
 }
 
+@media screen and (max-width: 768px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 
 *{
   box-sizing: border-box;
